<resources>
    <string name="app_name">TheCompass</string>
    <string name="COMPASS" />
    <string name="image">image</string>
    <string name="setDestination">Set Destination</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="map">Map</string>
    <string name="submit">Submit</string>
    <string name="arrow">Arrow</string>
</resources>